--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mantine/dropzone": "^6.0.11",
     "@mantine/form": "^6.0.11",
     "@mantine/hooks": "^6.0.11",
+    "@mantine/notifications": "^6.0.11",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
