--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/hooks": "^6.0.11",
     "@mantine/modals": "^6.0.11",
     "@mantine/notifications": "^6.0.11",
+    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -27,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.0.1",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
