--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "face-api.js": "^0.22.2",
     "firebase": "^9.22.0",
