--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.0.1",
+    "socket.io-client": "^4.6.2",
     "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
