--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
