--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,4 @@
 REACT_APP_BACKEND_URL = "localhost:4000"
 REACT_APP_SECRET_KEY = "localhost:4000"
 REACT_APP_SECRET_IV = ""
+REACT_APP_WEB_CREDENTIALS_FCM = "BEY_-vDtNpeW9XyW3En9xpNuxMqrzJemFJol-Jo1AfGzHZtm-v1B42evgpzhAneKc1GCNsyNP0aikgps6s6xsaw"
