Añadido: Renderizado de pago incluyendo ship rates

--- a/src/.env
+++ b/src/.env
@@ -2,3 +2,4 @@ REACT_APP_BACKEND_URL = "localhost:4000"
 REACT_APP_SECRET_KEY = "localhost:4000"
 REACT_APP_SECRET_IV = ""
 REACT_APP_WEB_CREDENTIALS_FCM = "BEY_-vDtNpeW9XyW3En9xpNuxMqrzJemFJol-Jo1AfGzHZtm-v1B42evgpzhAneKc1GCNsyNP0aikgps6s6xsaw"
+REACT_APP_PAYPAL_CLIENT_ID = "AcNwxnDU9yuGiccjezWZAma2lz-N1bbzM_xXVh2DRJklPIwFMyq7-ucWgRnr4jcJORMvzzDnzTilCEBq"
