--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "k-bocchi-react",
-  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +11,7 @@
     "@mantine/hooks": "^6.0.11",
     "@mantine/modals": "^6.0.11",
     "@mantine/notifications": "^6.0.11",
+    "@paypal/react-paypal-js": "^8.1.0",
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
