--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "face-api.js": "^0.22.2",
     "firebase": "^9.22.0",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
