--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "face-api.js": "^0.22.2",
     "firebase": "^9.22.0",
     "jspdf": "^2.5.1",
+    "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
